--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,21 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  bloc: ^8.1.1
+  flutter_bloc: ^8.1.2
+  velocity_x: ^3.6.0
+  velocity_bloc: ^1.1.3
+  shared_preferences: ^2.1.1
+  auto_route: ^7.1.0
+  google_fonts: ^6.1.0
+  dio: ^5.1.2
+  smooth_page_indicator: ^1.1.0
+  cached_network_image: ^3.3.1 #3.2.3 repclace when it needs
+  flutter_widget_from_html_core: ^0.10.1
+  awesome_bottom_bar: ^1.2.4
+  feather_icons: ^1.2.0
+  flutter_screenutil: ^5.9.0
+  animation_wrappers: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -46,6 +61,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  build_runner: ^2.4.8
+  auto_route_generator: ^7.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -59,8 +76,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+     - assets/images/
+     - assets/icons/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
